--- a/phase04/task50/index.html
+++ b/phase04/task50/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Task 50-问卷列表页</title>  
-    <link href='common.css' rel='stylesheet'>
-    <link href='index.css' rel='stylesheet'>
+    <link href='css/common.css' rel='stylesheet'>
+    <link href='css/index.css' rel='stylesheet'>
   </head>
 <body>
   <nav>
