--- a/phase03/task44/task44.html
+++ b/phase03/task44/task44.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='zh-cmn-Hans'>
   <head>
     <meta charset="utf-8">
     <title>Task 44-多功能相册之瀑布布局</title>
